# LinLin

./: .gitmodules  README.md
auction/src/: contract.rs  lib.rs
client/: index.html
client/src/: main.tsx
client/src/GraphQL/: Url.ts  queries.ts
client/src/components/: About.tsx  ActiveAuctionCard.tsx  Auction.tsx  AuctionForm.tsx  Body.tsx  CountDownCard.tsx  Login.tsx  MarketPlace.tsx  Navbar.tsx  PastAuctions.tsx  ProgressBar.tsx  UpComingAuctionCard.tsx
frontend/: .gitignore  Cargo.toml  bun.lockb  input.css  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: App.tsx  layout.tsx  page.tsx
frontend/app/components/: About.tsx  ActiveAuctionCard.tsx  Auction.tsx  AuctionForm.tsx  Banner.tsx  Body.tsx  CountDownCard.jsx  Navbar.tsx  OnGoingStatus.jsx  PastAuctions.tsx  ProgressBar.jsx  UpComingAuctionCard.tsx  UpCommingAuctionCard.tsx  Web3Button.jsx
frontend/assets/: tailwind.css
frontend/src/components/: hero.rs
frontend/src/views/: blog.rs  home.rs  navbar.rs
market/: Cargo.toml
market/src/: contract.rs  lib.rs  service.rs  state.rs
