[package]
name = "market"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
async-graphql-derive = { version = "=7.0.2", default-features = false }
bcs = "0.1.6"
linera-sdk = "0.11.3"
log = "0.4.21"
serde = "1.0.203"
thiserror = "1.0.61"

[dev-dependencies]
linera-sdk = { version = "0.11.3", features = ["test"] }
log = "0.4.21"

[[bin]]
name = "market_contract"
path = "src/contract.rs"

[[bin]]
name = "market_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
